<resources>
    <string name="app_name">Mi Presupuesto</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_account">Cuentas</string>
    <string name="menu_category">Categorias</string>
    <string name="menu_expenses">Gastos</string>
    <string name="add">Agregar</string>
    <string name="name">Nombre</string>
    <string name="amount">Ingreso</string>
    <string name="budget">Cantidad</string>
    <string name="save">Guardar</string>
    <string name="account_type">Tipo de cuenta</string>
    <string name="income">Ingresos</string>
    <string name="expense">Gastos</string>
    <string name="to_budget">Disponible para alocar</string>
    <string name="store">Tienda</string>
    <string name="date">Fecha</string>
    <string-array name="account_types_array">
        <item>cheque</item>
        <item>ahorro</item>
        <item>efectivo</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
</resources>
