<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_acount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="guajardo.budget.EditAccountActivity">

    <EditText
        android:id="@+id/account_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <Spinner
        android:id="@+id/account_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/account_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="saveAccount"
        android:text="@string/save"
        android:textColor="@color/white" />
</LinearLayout>